# libpressio-r

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  Makefile  NAMESPACE  README.md  cleanup  config.h.in  configure  configure.ac
R/: RcppExports.R  zzz.R
examples/: compress_example.R  test.R
man/: libpressio-package.Rd
src/: Makevars.in  RcppExports.cpp  libpressio.cpp  libpressio_types.h  rcpp_hello_world.cpp
